# StaticPy

./: .gitignore  Makefile  Pipfile  README.md  about.html  app.py  config.yaml  contacts.html  freeze.py  index.html  notebook.code-workspace  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: pythonpackage.yml
_dev/: Makefile  Pipfile  app.py
_dev/configs/: base.yaml
_dev/docs/: Base_Configuration.md  Building_Your_Own_Website.md  Context.md  Getting_Started.md  Templating.md  index.html
_dev/posts/: index.html
_dev/templates/: header.html  home.html  note.html  post.html
configs/: base.yaml  config.yaml  home.yaml
docs/: Base_Configuration.html  Building_Your_Own_Website.html  Context.html  Getting_Started.html  Project_Structure.html  about.html  contacts.html  index.html
docs/Mathematics/: index.html
documentations/: index.html
notes/: index.html  test.md
posts/: index.html  markdown-examples.html  markdown-examples.md  mathjax-examples.html  mathjax-examples.md  new_page.html  python-simple-package-structure.md  the-jekyll-nokogiri-problem.md
src/: config_handler.py  source_handler.py
static/: base.css  onThisPage.js
staticpy/: __init__.py  app.py  config_handler.py  context.py  doc_builder.py  freezer.py  globals.py  log.py  page.py  routes.py  source_handler.py
templates/: base.html  default.html  footer.html  header.html  home.html  main.html  note.html  post.html
test/: test.py  test_build.py  test_context.py  test_freeze.py  test_sanity.py
tests/: test_build.py  test_context.py  test_freeze.py  test_serve.py
(+637 files in other folders)
